--- a/src/Components/PlayVideo/PlayVideo.css
+++ b/src/Components/PlayVideo/PlayVideo.css
@@ -10,6 +10,13 @@
   width: 100%;
 }
 
+.play-video iframe{
+  width: 100%;
+  height: 37vw;
+  border-radius: 15px;
+
+}
+
 .play-video h3{
   margin-top: 10px;
   font-weight: 600;
@@ -94,6 +101,7 @@
 
 .vid-description p{
   margin-bottom: 10px;
+  white-space: pre-line
 }
 
 .vid-description .views{
@@ -132,7 +140,7 @@
 
 .comments h3{
   font-size: 14px;
-  margin-bottom: 2px;
+  margin-bottom: 5px;
 }
 
 .comments h3 span{
