--- a/src/Components/PlayVideo/PlayVideo.css
+++ b/src/Components/PlayVideo/PlayVideo.css
@@ -167,3 +167,19 @@
 .comment-action span{
   color: #5a5a5a;
 }
+
+
+
+@media screen and (max-width: 1139px){ 
+  .play-video{
+    flex-basis: 100%;
+  }
+
+  .play-video iframe{
+    width: 100%;
+    height: 50vw;
+  }
+
+
+}
+
