--- a/src/Components/Sidebar/Sidebar.css
+++ b/src/Components/Sidebar/Sidebar.css
@@ -13,6 +13,8 @@
 .small-sidebar{
   width: 80px;
   padding-top: 15px;
+  padding-left: 0.5%;
+  padding-right: 0.5%;
 }
 
 .small-sidebar p{
@@ -76,8 +78,6 @@
 
 }
 
-
-
 .sidebar hr{
   border: 0;
   height: 1px;
@@ -98,4 +98,11 @@
   margin-right: 15px;
   border-radius: 50%;
   
+}
+
+
+@media screen and (max-width:900px){
+  .sidebar{
+    display:none
+  }
 }
