--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -1,6 +1,6 @@
 .container{
   background-color: #f9f9f9;
-  padding-left: 13%;
+  padding-left: 250px;
   padding-right: 20px;
   padding-top: 20px;
   padding-bottom: 50px;
@@ -9,4 +9,12 @@
 
 .large-container{
   padding-left: 5.5%;
+}
+
+
+@media screen and (max-width:900px){
+  .large-container, .container{
+    padding-left: 2.5%;
+    padding-right: 2.5%;
+  }
 }
